Upgrade to Java 21, review and cleanup code